<resources>
    <string name="app_name">RICEDOC</string>
    <string name="imagedisplay">imagedisplay</string>
    <string name="textlogo">textlogo</string>
    <string name="capture">capture</string>
    <string name="gallery">gallery</string>
    <string name="predict">predict</string>
    <string name="aboutus">About</string>
    <string name="main">Main</string>
    <string name="guide">Guide</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>