<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainpageActivity"
    >

    <!--
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Camera"
        android:textSize="25dp"
        android:layout_below="@+id/imageView"
        android:id="@+id/captureBtn"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#73A516"
        android:fontFamily="@font/balsamiqsans_regular"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Gallery"
        android:layout_below="@+id/captureBtn"
        android:id="@+id/selectBtn"
        android:textSize="25dp"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#73A516"
        android:fontFamily="@font/balsamiqsans_regular"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Predict"
        android:textSize="25dp"
        android:layout_below="@+id/selectBtn"
        android:id="@+id/predictBtn"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#73A516"
        android:fontFamily="@font/balsamiqsans_regular"
        />
    -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_below="@+id/textlogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:background="#EDEDED"
        android:contentDescription="@string/imagedisplay" />

    <ImageView
        android:id="@+id/textlogo"
        android:layout_width="295dp"
        android:layout_height="79dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/textlogo"
        app:srcCompat="@drawable/ricedoc_textf" />

    <ImageView
        android:id="@+id/infoimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/infoimage" />

    <!-- CameraButton -->
    <ImageButton
        android:id="@+id/captureBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/infoimage"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#00FFFFFF"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/capture"
        android:src="@drawable/capture_button"
        app:srcCompat="@drawable/capture_button"
        tools:src="@drawable/capture_button"
        tools:srcCompat="@drawable/capture_button" />

    <ImageButton
        android:id="@+id/galleryBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/captureBtn"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/gallery"
        app:srcCompat="@drawable/gallery_button" />

    <ImageButton
        android:id="@+id/predictBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/galleryBtn"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/predict"
        app:srcCompat="@drawable/predict_button" />



</RelativeLayout>